# gears

./: Cargo.toml  LICENSE  rustfmt.toml
.github/workflows/: rust.yml
gear_impls/: Cargo.toml
gear_impls/examples/: add.rs
gear_impls/src/: lib.rs
gearify/: Cargo.toml
gearify/src/: lib.rs  main.rs
gearify/tests/: wasm.rs
gearify/tests/output/: add.gear
gears_core/: Cargo.toml
gears_core/src/: gear.rs  gear_file.rs  lib.rs  runtime.rs  ty.rs  util.rs  value.rs
gears_core/src/gear/: command.rs  compound.rs  mod.rs
gears_core/src/gear/internal/: math.rs  mod.rs
gears_core/src/gear/special/: io.rs  literal.rs  mod.rs
gears_wasm/: Cargo.toml
gears_wasm/src/: lib.rs
