[package]
name = "gears_core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
petgraph = "0.6.2"
slotmap = { git = "https://github.com/orlp/slotmap", features = ["serde"] }
egg = { version = "0.9.0", features = ["serde-1"] }
derive_more = "0.99.17"
postcard = { version = "1.0", features = ["use-std"] }
serde = "1.0"
anyhow = "1.0"
uuid = { version = "1.1", features = ["serde"] }
